manifests/environments/tt02/apps/bff/ingress-hostname.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bff
spec:
  hostnames:
    - arbeidsflate.tt02.dis-core.altinn.cloud
